--- a/ranked4-frontend/src/app/admin/admin.component.html
+++ b/ranked4-frontend/src/app/admin/admin.component.html
@@ -23,9 +23,18 @@
     <div class="admin-card">
       <h3>Manage Lootboxes</h3>
       <p>Create, edit or delete lootbox types.</p>
-      
+
       <a [routerLink]="['/admin-lootboxes']" class="btn btn-primary">
         Manage lootboxes
+      </a>
+    </div>
+
+    <div class="admin-card">
+      <h3>Manage GIFs</h3>
+      <p>Create, edit or delete GIF reactions.</p>
+
+      <a [routerLink]="['/admin-gifs']" class="btn btn-primary">
+        Manage GIFs
       </a>
     </div>
   </div>
