Fix golds on win

--- a/ranked4-frontend/src/app/profile/profile.component.html
+++ b/ranked4-frontend/src/app/profile/profile.component.html
@@ -76,7 +76,7 @@
           [class.selectable]="!isNoDiscEquipped()" (click)="selectNoDisc()">
 
           @if (isNoDiscEquipped()) {
-          <div class="equipped-badge">✓ Équipé</div>
+          <div class="equipped-badge">✓ Equipped</div>
           }
 
           <div class="disc-visual">
