--- a/ranked4-frontend/src/app/game/game/game.component.html
+++ b/ranked4-frontend/src/app/game/game/game.component.html
@@ -1,22 +1,20 @@
 <div class="game-container">
 
-<div class="game-players">
+  <div class="game-players">
 
-  <div class="player-column player-column-me">
-    <div 
-      class="player-info player-info-me"
-      [class.is-player-one]="myDisc === 'PLAYER_ONE'"
-      [class.is-player-two]="myDisc === 'PLAYER_TWO'"
-      [class.is-active-turn]="isMyTurn && gameStatus === 'IN_PROGRESS'">
-      
-      @if (myPlayerInfo) {
-          
-          @if (myPlayerInfo.avatarUrl) {
-          <img [src]="myPlayerInfo.avatarUrl" alt="Avatar" class="player-avatar">
+    <div class="player-column player-column-me">
+      <div class="player-info player-info-me" [class.is-player-one]="myDisc === 'PLAYER_ONE'"
+        [class.is-player-two]="myDisc === 'PLAYER_TWO'"
+        [class.is-active-turn]="isMyTurn && gameStatus === 'IN_PROGRESS'">
+
+        @if (myPlayerInfo) {
+
+        @if (myPlayerInfo.avatarUrl) {
+        <img [src]="myPlayerInfo.avatarUrl" alt="Avatar" class="player-avatar">
         } @else {
-          <div class="player-avatar-placeholder">
-            {{ myPlayerInfo.displayName.substring(0, 1) | uppercase }}
-          </div>
+        <div class="player-avatar-placeholder">
+          {{ myPlayerInfo.displayName.substring(0, 1) | uppercase }}
+        </div>
         }
 
         <div class="player-details">
@@ -26,45 +24,41 @@
           </span>
           <span class="player-elo">{{ myPlayerInfo.elo }} R4P</span>
         </div>
-        
-        <div 
-          class="piece-indicator piece"
+
+        <div class="piece-indicator piece"
           [ngStyle]="myDisc === 'PLAYER_ONE' ? playerOneDiscStyle : playerTwoDiscStyle">
         </div>
-        
-      } @else {
+
+        } @else {
         <div class="player-details">
           <span class="player-name">Loading...</span>
         </div>
-      }
-    </div>
-    
-    <div class="gif-bubble-container">
-      @if (myPlayerInfo && lastReactionsByPlayer[myPlayerInfo.userId]; as r) {
-          <div class="gif-bubble"> <img [src]="r.assetPath" [alt]="r.gifCode" /></div>
         }
+      </div>
+
+      <div class="gif-bubble-container">
+        @if (myPlayerInfo && lastReactionsByPlayer[myPlayerInfo.userId]; as r) {
+        <div class="gif-bubble"> <img [src]="r.assetPath" [alt]="r.gifCode" /></div>
+        }
+      </div>
     </div>
-  </div>
 
-  <div class="player-info-vs">
-    <span>VS</span>
-  </div>
+    <div class="player-info-vs">
+      <span>VS</span>
+    </div>
 
-  <div class="player-column player-column-opponent">
-    <div 
-      class="player-info player-info-opponent"
-      [class.is-player-one]="isOpponentP1()"
-      [class.is-player-two]="!isOpponentP1()"
-      [class.is-active-turn]="!isMyTurn && gameStatus === 'IN_PROGRESS'">
-      
-      @if (opponentPlayerInfo) {
+    <div class="player-column player-column-opponent">
+      <div class="player-info player-info-opponent" [class.is-player-one]="isOpponentP1()"
+        [class.is-player-two]="!isOpponentP1()" [class.is-active-turn]="!isMyTurn && gameStatus === 'IN_PROGRESS'">
+
+        @if (opponentPlayerInfo) {
 
         @if (opponentPlayerInfo.avatarUrl) {
-          <img [src]="opponentPlayerInfo.avatarUrl" alt="Avatar" class="player-avatar">
+        <img [src]="opponentPlayerInfo.avatarUrl" alt="Avatar" class="player-avatar">
         } @else {
-          <div class="player-avatar-placeholder">
-            {{ opponentPlayerInfo.displayName.substring(0, 1) | uppercase }}
-          </div>
+        <div class="player-avatar-placeholder">
+          {{ opponentPlayerInfo.displayName.substring(0, 1) | uppercase }}
+        </div>
         }
 
         <div class="player-details">
@@ -72,97 +66,93 @@
           <span class="player-elo">{{ opponentPlayerInfo.elo }} R4P</span>
         </div>
 
-        <div 
-          class="piece-indicator piece"
-          [ngStyle]="isOpponentP1() ? playerOneDiscStyle : playerTwoDiscStyle">
+        <div class="piece-indicator piece" [ngStyle]="isOpponentP1() ? playerOneDiscStyle : playerTwoDiscStyle">
         </div>
-        
-      } @else {
+
+        } @else {
         <div class="player-details">
           <span class="player-name">Opponent...</span>
         </div>
-      }
+        }
+      </div>
+
+      <div class="gif-bubble-container">
+        @if (opponentPlayerInfo && lastReactionsByPlayer[opponentPlayerInfo.userId]; as r) {
+        <div class="gif-bubble"> <img [src]="r.assetPath" [alt]="r.gifCode" />
+        </div>
+        }
+      </div>
     </div>
 
-    <div class="gif-bubble-container">
-      @if (opponentPlayerInfo && lastReactionsByPlayer[opponentPlayerInfo.userId]; as r) {
-          <div class="gif-bubble"> <img [src]="r.assetPath" [alt]="r.gifCode" />
-          </div>
-        }
-    </div>
   </div>
 
-</div>
-
   <header class="game-header">
-    <h2 
-      class="game-message"
-      [class.my-turn]="isMyTurn"
-      [class.finished]="gameStatus === 'FINISHED'"
-      [class.loser]="isLoser"> {{ gameMessage }}
-    </h2>
+    <div class="game-message" [class.my-turn]="isMyTurn" [class.finished]="gameStatus === 'FINISHED'"
+      [class.loser]="isLoser">
+      <div class="message-main">{{ gameMessage }}</div>
+      @if (goldEarned !== null && gameStatus === 'FINISHED') {
+      <div class="message-rewards">
+        <div class="reward-gold">+{{ goldEarned }} 🪙</div>
+        @if (eloChange !== null) {
+        <div class="reward-elo">{{ eloChange >= 0 ? '+' : '' }}{{ eloChange }} R4P</div>
+        }
+      </div>
+      }
+    </div>
   </header>
 
   <div class="game-board-layout">
 
     <div class="board-area">
-      
+
       <div class="game-controls">
         @for (col of [0, 1, 2, 3, 4, 5, 6]; track $index) {
-          <div 
-            class="control-col"
-            (click)="playMove($index)"
-            [class.disabled]="!isMyTurn || gameStatus === 'FINISHED'">
-          </div>
+        <div class="control-col" (click)="playMove($index)" [class.disabled]="!isMyTurn || gameStatus === 'FINISHED'">
+        </div>
         }
       </div>
 
       <div class="game-board-visual">
         @for (row of [0, 1, 2, 3, 4, 5]; track $index) {
-          @for (col of [0, 1, 2, 3, 4, 5, 6]; track $index) {
-            <div class="board-cell-hole"></div>
-          }
+        @for (col of [0, 1, 2, 3, 4, 5, 6]; track $index) {
+        <div class="board-cell-hole"></div>
+        }
         }
       </div>
 
       <div class="game-board-pieces">
         @for (row of board; track r; let r = $index) {
-          @for (cell of row; track c; let c = $index) {
-            
-            <div class="board-cell-piece">
-              @if (cell !== '_') {
-                <div 
-                  class="piece"
-                  [ngStyle]="cell === '1' ? playerOneDiscStyle : playerTwoDiscStyle"
-                  [class.last-move-piece]="isLastMove(r, c)">
-                </div>
-              }
-            </div>
+        @for (cell of row; track c; let c = $index) {
 
+        <div class="board-cell-piece">
+          @if (cell !== '_') {
+          <div class="piece" [ngStyle]="cell === '1' ? playerOneDiscStyle : playerTwoDiscStyle"
+            [class.last-move-piece]="isLastMove(r, c)">
+          </div>
           }
+        </div>
+
+        }
         }
       </div>
 
     </div>
 
     <div class="gif-menu" *ngIf="gameStatus === 'IN_PROGRESS' && gifs?.length">
-      <div
-        class="gif-menu-item"
-        *ngFor="let gif of gifs"
-        (click)="onGifClick(gif)">
+      <div class="gif-menu-item" *ngFor="let gif of gifs" (click)="onGifClick(gif)">
         <img [src]="gif.assetPath" [alt]="gif.description || gif.code" />
       </div>
     </div>
   </div>
   <footer class="game-footer">
     @if (gameStatus === 'FINISHED') {
-      <button class="btn btn-primary" (click)="returnToProfile()">
-        Return to Profile
-      </button>
+    <button class="btn btn-primary" (click)="returnToProfile()">
+      Return to Profile
+    </button>
     } @else {
-      <button class="btn btn-outline" (click)="returnToProfile()">
-        Forfeit
-      </button>
+    <button class="btn btn-outline" (click)="returnToProfile()">
+      Forfeit
+    </button>
     }
   </footer>
 
